[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "anysqlite"
dynamic = ["version"]
description = ''
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Karen Petrosyan", email = "kar.petrosyanpy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "anyio>3.4.0"
]

[project.urls]
Issues = "https://github.com/karosis88/anysqlite/issues"
Source = "https://github.com/karosis88/anysqlite"

[tool.hatch.version]
path = "anysqlite/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/anysqlite",
    "/CHANGELOG.md",
    "/README.md",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_ignores = false


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true


[tool.pytest.ini_options]
addopts = ["-rxXs", "--strict-config", "--strict-markers"]
filterwarnings = []

[tool.coverage.run]
omit = [
    "venv/*", 
]
include = ["anysqlite/*", "tests/*"]

[tool.coverage.report]
exclude_also = [
  '__repr__',
  'raise NotImplementedError()'
]

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I"
]

[tool.ruff.isort]
combine-as-imports = true